# gluon_bot

./: .gitignore  Cargo.toml  README.md  release.yml
.github/workflows/: release.yml
src/: api.rs  commands.rs  database.rs  main.rs  tasks.rs  utils.rs
src/commands/: base.rs  city.rs  f1bet.rs  f1results.rs  f1standings.rs  first.rs  news.rs  next.rs  omdb.rs  plugin.rs  rates.rs  weather.rs
src/tasks/: base.rs  feeds.rs  next.rs  train_game.rs
