[package]
name = "gluon_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
futures = "0.3.0"
irc = "0.15.0"
openweathermap = "0.2.4"
tokio = { version = "1.25.0", features = ["full"] }