[package]
name = "gluon_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
circular-queue = "0.2.6"
csv = "1.2.0"
feed-rs = "1.3.0"
futures = "0.3.0"
irc = "0.15.0"
itertools = "0.10.5"
newsapi = "0.6.0"
openweather_sdk = "0.1.2"
rand = "0.8.5"
regex = "1.7.3"
reqwest = { version = "0.11.0", features = ["json"] }
scraper = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["full"] }